Feat: Added collector implementation