@@ -5,240 +5,230 @@ import java.util.List;
 
 public class Database {
 
-    public static List<Videogame> videogames;
+    public static List<Car> cars;
 
     static {
-        videogames = List.of(
-                Videogame.builder()
-                        .name("Forza horizon 5")
-                        .price(50.06)
-                        .console(Console.XBOX)
+        cars = List.of(
+                Car.builder()
+                        .name("Nissan Sentra")
+                        .price(300000.0)
+                        .brand(Brand.NISSAN)
                         .reviews(List.of(
-                                new Review("Is the best", 5),
-                                new Review("Is the best but expensive", 4),
-                                new Review("Is the best x2", 5)
+                                new Review("I have face some issues with automatic transmission", 1),
+                                new Review("Expensive", 3),
+                                new Review("Ideal for family", 5)
                         ))
-                        .officialWebsite("www.forza.com")
+                        .officialWebsite("www.nissan.com")
                         .isDiscount(false)
                         .totalSold(74)
                         .build(),
-                Videogame.builder()
-                        .name("Residen evil 4")
-                        .price(55.20)
-                        .console(Console.ALL)
+                Car.builder()
+                        .name("Nissan Versa")
+                        .price(300000.0)
+                        .brand(Brand.NISSAN)
                         .reviews(List.of(
-                                new Review("Is the best", 5),
-                                new Review("Is the best x2", 4),
-                                new Review("Is the best x3", 5),
-                                new Review("Is the best x4", 5)
+                                new Review("It's ok for work", 5),
+                                new Review("Not aesthetic", 3),
+                                new Review("Ideal for family", 5)
                         ))
-                        .officialWebsite("www.rs4.com")
-                        .isDiscount(true)
-                        .totalSold(96)
-                        .build(),
-                Videogame.builder()
-                        .name("Assassins creed origins")
-                        .price(15.55)
-                        .console(Console.ALL)
-                        .reviews(List.of(
-                                new Review("Is the best Assassins ", 5)
-                        ))
-                        .officialWebsite("www.origins.com")
+                        .officialWebsite("www.nissan.com")
                         .isDiscount(false)
-                        .totalSold(65)
+                        .totalSold(34)
                         .build(),
-                Videogame.builder()
-                        .name("Assassins creed odisey")
-                        .price(15.55)
-                        .console(Console.ALL)
+                Car.builder()
+                        .name("Nissan Kicks")
+                        .price(500000.0)
+                        .brand(Brand.NISSAN)
                         .reviews(List.of(
-                                new Review("Is the best Assassins ", 5),
-                                new Review("Is the best Assassins x2 ", 5),
-                                new Review("Is the best Assassins  x3", 5)
+                                new Review("Good car", 5),
+                                new Review("Good", 4),
+                                new Review("Ideal for family", 5)
                         ))
-                        .officialWebsite("www.odisey.com")
+                        .officialWebsite("www.nissan.com")
                         .isDiscount(false)
-                        .totalSold(33)
+                        .totalSold(54)
                         .build(),
-                Videogame.builder()
-                        .name("Assassins creed valhalla")
-                        .price(30.33)
-                        .console(Console.ALL)
+                Car.builder()
+                        .name("Golf")
+                        .price(200000.0)
+                        .brand(Brand.VW)
                         .reviews(List.of(
-                                new Review("Is great Assassins ", 4),
-                                new Review("Is great Assassins x2 ", 3),
-                                new Review("Is great Assassins  x3", 4),
-                                new Review("Is great Assassins  x4", 5)
+                                new Review("Too small car", 1),
+                                new Review("It works", 3),
+                                new Review("Individual use", 5)
                         ))
-                        .officialWebsite("www.valhalla.com")
+                        .officialWebsite("www.vw.com")
                         .isDiscount(false)
-                        .totalSold(78)
+                        .totalSold(23)
                         .build(),
-                Videogame.builder()
-                        .name("GTA 5")
-                        .price(25.5)
-                        .console(Console.ALL)
+                Car.builder()
+                        .name("Vento")
+                        .price(400000.0)
+                        .brand(Brand.VW)
                         .reviews(List.of(
-                                new Review("Is the best", 4)
+                                new Review("Familiar", 5),
+                                new Review("It works", 5),
+                                new Review("Good machine", 5)
                         ))
-                        .officialWebsite("www.gta.com")
-                        .isDiscount(true)
-                        .totalSold(140)
-                        .build(),
-                Videogame.builder()
-                        .name("Crash 4")
-                        .price(50.06)
-                        .console(Console.ALL)
-                        .reviews(List.of(
-                                new Review("Is too short", 2),
-                                new Review("Is too short x2", 1)
-                        ))
-                        .officialWebsite("www.crash.com")
+                        .officialWebsite("www.vw.com")
                         .isDiscount(false)
-                        .totalSold(188)
+                        .totalSold(5)
                         .build(),
-                Videogame.builder()
-                        .name("Forza horizon 4")
-                        .price(10.06)
-                        .console(Console.XBOX)
+                Car.builder()
+                        .name("Jetta")
+                        .price(300000.0)
+                        .brand(Brand.VW)
+                        .reviews(List.of(
+                                new Review("Classic", 1),
+                                new Review("Not for long travel", 2),
+                                new Review("It has comfort", 5)
+                        ))
+                        .officialWebsite("www.vw.com")
+                        .isDiscount(false)
+                        .totalSold(15)
+                        .build(),
+                Car.builder()
+                        .name("Soul")
+                        .price(500000.0)
+                        .brand(Brand.KIA)
+                        .reviews(List.of(
+                                new Review("Good", 5),
+                                new Review("A dream", 5)
+                        ))
+                        .officialWebsite("www.kia.com")
+                        .isDiscount(false)
+                        .totalSold(199)
+                        .build(),
+                Car.builder()
+                        .name("Forte")
+                        .price(400000.0)
+                        .brand(Brand.KIA)
                         .reviews(Collections.emptyList())
-                        .officialWebsite("www.forza.com")
+                        .officialWebsite("www.kia.com")
                         .isDiscount(false)
-                        .totalSold(52)
+                        .totalSold(10)
                         .build(),
-                Videogame.builder()
-                        .name("The last of us")
-                        .price(40.06)
-                        .console(Console.PLAYSTATION)
+                Car.builder()
+                        .name("Rio")
+                        .price(300000.0)
+                        .brand(Brand.KIA)
                         .reviews(List.of(
-                                new Review("Is the best", 5),
-                                new Review("When launch the part 3???", 5)
+                                new Review("Good", 5),
+                                new Review("A dream", 5)
                         ))
-                        .officialWebsite("www.last-of-us.com")
+                        .officialWebsite("www.kia.com")
                         .isDiscount(false)
-                        .totalSold(41)
+                        .totalSold(199)
                         .build(),
-                Videogame.builder()
-                        .name("Good of war")
+                Car.builder()
+                        .name("Tesla")
                         .price(28.00)
-                        .console(Console.PLAYSTATION)
+                        .brand(Brand.TESLA)
                         .reviews(List.of(
-                                new Review("not very good", 3),
-                                new Review("not like me", 2),
-                                new Review("not very good x2", 2)
+                                new Review("Magic", 5),
+                                new Review("Dream come true", 5),
+                                new Review("It is the best on the market", 5)
                         ))
-                        .officialWebsite("www.forza.com")
+                        .officialWebsite("www.tesla.com")
                         .isDiscount(false)
                         .totalSold(79)
                         .build(),
-                Videogame.builder()
-                        .name("Halo")
-                        .price(50.06)
-                        .console(Console.XBOX)
-                        .reviews(List.of(new Review("Is the best", 4)))
-                        .officialWebsite("www.halo.com")
+                Car.builder()
+                        .name("Yaris")
+                        .price(300000.0)
+                        .brand(Brand.TOYOTA)
+                        .reviews(List.of(new Review("Is the best", 5)))
+                        .officialWebsite("www.toyota.com")
                         .isDiscount(false)
                         .totalSold(14)
                         .build(),
-                Videogame.builder()
-                        .name("Mario bros")
-                        .price(55.99)
-                        .console(Console.NINTENDO)
-                        .reviews(List.of(new Review("nintendo is the best", 5)))
-                        .officialWebsite("www.mario.com")
+                Car.builder()
+                        .name("Corolla")
+                        .price(400000.0)
+                        .brand(Brand.TOYOTA)
+                        .reviews(List.of(new Review("Is the best", 5)))
+                        .officialWebsite("www.toyota.com")
                         .isDiscount(false)
-                        .totalSold(64)
+                        .totalSold(16)
                         .build(),
-                Videogame.builder()
-                        .name("Geometry dash pc")
-                        .price(0.99)
-                        .console(Console.PC)
-                        .reviews(List.of(
-                                new Review("some comment", 5),
-                                new Review("some comment", 2),
-                                new Review("some comment", 4),
-                                new Review("some comment", 4))
-                        )
-                        .officialWebsite("www.g.com")
+                Car.builder()
+                        .name("Hilux")
+                        .price(500000.0)
+                        .brand(Brand.TOYOTA)
+                        .reviews(List.of(new Review("Is the best", 5)))
+                        .officialWebsite("www.toyota.com")
                         .isDiscount(false)
-                        .totalSold(236)
+                        .totalSold(17)
                         .build(),
-                Videogame.builder()
-                        .name("Luigi mansion")
-                        .price(50.06)
-                        .console(Console.NINTENDO)
+                Car.builder()
+                        .name("Kwid")
+                        .price(247000.0)
+                        .brand(Brand.RENAULT)
                         .reviews(Collections.emptyList())
-                        .officialWebsite("www.mario.com")
+                        .officialWebsite("www.renault.com")
                         .isDiscount(false)
-                        .totalSold(49)
+                        .totalSold(19)
                         .build(),
-                Videogame.builder()
-                        .name("Mario party")
-                        .price(22.00)
-                        .console(Console.NINTENDO)
-                        .reviews(List.of(new Review("Too boring", 1)))
-                        .officialWebsite("www.mario.com")
+                Car.builder()
+                        .name("Kardian")
+                        .price(370000.0)
+                        .brand(Brand.RENAULT)
+                        .reviews(Collections.emptyList())
+                        .officialWebsite("www.renault.com")
                         .isDiscount(false)
-                        .totalSold(4)
+                        .totalSold(29)
                         .build(),
-                Videogame.builder()
-                        .name("COD black ops")
-                        .price(18.60)
-                        .console(Console.PLAYSTATION)
-                        .reviews(List.of(new Review("5 Stars", 5), new Review("5 Stars", 5)))
-                        .officialWebsite("www.cod.com")
+                Car.builder()
+                        .name("Duster")
+                        .price(388000.0)
+                        .brand(Brand.RENAULT)
+                        .reviews(Collections.emptyList())
+                        .officialWebsite("www.renault.com")
                         .isDiscount(false)
-                        .totalSold(900)
+                        .totalSold(29)
                         .build(),
-                Videogame.builder()
-                        .name("COD black mobile")
-                        .price(0.0)
-                        .console(Console.MOBILE)
+                Car.builder()
+                        .name("Alsvin")
+                        .price(249000.0)
+                        .brand(Brand.CHANGAN)
                         .reviews(List.of(new Review("4 Stars", 4)))
-                        .officialWebsite("www.cod.com")
+                        .officialWebsite("www.changan.com")
                         .isDiscount(false)
                         .totalSold(1200)
                         .build(),
-                Videogame.builder()
-                        .name("Geometry dash")
-                        .price(1.0)
-                        .console(Console.MOBILE)
+                Car.builder()
+                        .name("Hunter")
+                        .price(500000.0)
+                        .brand(Brand.CHANGAN)
                         .reviews(List.of(
-                                new Review("amazing", 5),
-                                new Review("funny", 4),
-                                new Review("ok", 5),
-                                new Review("amazing2", 5),
-                                new Review("funny2", 4),
-                                new Review("ok2", 5)))
-                        .officialWebsite("www.geometry.com")
+                                new Review("Amazing", 5),
+                                new Review("It works as expected", 5)))
+                        .officialWebsite("www.changan.com")
                         .isDiscount(true)
                         .totalSold(2000)
                         .build(),
-                Videogame.builder()
-                        .name("Candy crush")
-                        .price(0.0)
-                        .console(Console.MOBILE)
+                Car.builder()
+                        .name("Nissan Sentra")
+                        .price(300000.0)
+                        .brand(Brand.NISSAN)
                         .reviews(List.of(
-                                new Review("", 5),
-                                new Review("", 3),
-                                new Review("", 3),
-                                new Review("", 3),
-                                new Review("", 3),
-                                new Review("", 2)))
-                        .officialWebsite("www.candy-crush.com")
-                        .isDiscount(false)
-                        .totalSold(2200)
-                        .build(),
-                Videogame.builder()
-                        .name("Forza horizon 5")
-                        .price(50.06)
-                        .console(Console.XBOX)
-                        .reviews(List.of(
-                                new Review("Is the best", 5),
-                                new Review("Is the best but expensive", 4),
-                                new Review("Is the best x2", 5)
+                                new Review("I have face some issues with automatic transmission", 1),
+                                new Review("Expensive", 3),
+                                new Review("Ideal for family", 5)
                         ))
-                        .officialWebsite("www.forza.com")
+                        .officialWebsite("www.nissan.com")
+                        .isDiscount(false)
+                        .totalSold(74)
+                        .build(),
+                Car.builder()
+                        .name("MG3")
+                        .price(300000.0)
+                        .brand(Brand.MG)
+                        .reviews(List.of(
+                                new Review("It's the best", 5),
+                                new Review("Good", 4)
+                        ))
+                        .officialWebsite("www.mg.com")
                         .isDiscount(false)
                         .totalSold(74)
                         .build()
